# cloudflare-ddns

./: .gitignore  Dockerfile  README.md  __main__.py  cloudflare-ddns.py  cloudflare.py  cloudflare_ddns.py  docker-compose.yml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: publish.yml
pkg/mod/cache/download/sumdb/sum.golang.org/lookup/golang.org/x/tools/: gopls@v0.15.3
pkg/mod/cache/download/sumdb/sum.golang.org/tile/8/0/x099/371.p/: 116
pkg/mod/cache/download/sumdb/sum.golang.org/tile/8/1/388.p/: 43
pkg/mod/cache/download/sumdb/sum.golang.org/tile/8/2/001.p/: 132
pkg/sumdb/sum.golang.org/: latest
snap/: snapcraft.yaml
src/: __init__.py  cloudflare_ddns.py
